--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,7 @@ dependencies {
     implementation 'com.android.volley:volley:1.1.0'
     implementation 'com.android.support:recyclerview-v7:30.0.0'
     implementation 'com.android.support:cardview-v7:30.0.0'
+    implementation 'com.github.santalu:mask-edittext:1.0.2'
+    implementation 'com.github.pinball83:masked-edittext:1.0.4'
+
 }
