--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
@@ -35,5 +36,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:30.0.0'
     implementation 'com.github.santalu:mask-edittext:1.0.2'
     implementation 'com.github.pinball83:masked-edittext:1.0.4'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+    implementation 'com.android.support:design:30.1.1'
 
 }
