--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,10 @@ dependencies {
     implementation 'com.github.pinball83:masked-edittext:1.0.4'
     implementation 'com.makeramen:roundedimageview:2.3.0'
     implementation 'com.android.support:design:30.1.1'
+    implementation 'com.karumi:dexter:6.2.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+
 
 }
