--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".screenSuplier.AddCategoryActivity"></activity>
+        <activity android:name=".ScreenConsumer.MainConsumer"></activity>
+        <activity android:name=".screenSuplier.EditAndDeleteProductActivity" />
+        <activity android:name=".screenSuplier.AddProductActivty" />
+        <activity android:name=".screenSuplier.AddCategoryActivity" />
         <activity android:name=".screenSuplier.EditAndDeleteCategoryActivity" />
         <activity
             android:name=".screenSuplier.SecondSuplierActivity"
